# Minor_LinearAlgebra

./: .gitmodules  CMakeLists.txt  Makefile  todo.org
src/: DegreeUtil.cpp  DegreeUtil.hpp  Keyboard.cpp  Keyboard.hpp  SDLImguiApplication.cpp  SDLImguiApplication.hpp  main.cpp
src/GUI/: AddVectorSumWindow.cpp  AddVectorSumWindow.hpp  AddVectorWindow.cpp  AddVectorWindow.hpp  MainMenuBar.cpp  MainMenuBar.hpp  StatsWindow.cpp  StatsWindow.hpp
src/linal/: Axis.hpp  CameraMatrix.cpp  CameraMatrix.hpp  DrawableLinalVector.cpp  DrawableLinalVector.hpp  LinalMatrix.hpp  LinalMatrix.tpp  LinalModel.cpp  LinalModel.hpp  LinalVector.cpp  LinalVector.hpp  PerspectiveMatrix.cpp  PerspectiveMatrix.hpp
src/models/: Arrow.cpp  Arrow.hpp  Ship.cpp  Ship.hpp
